[package]
name = "S3_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
# for AWS
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
tokio = { version = "1", features = ["full"] }
#
lambda_runtime = "0.6.1"
serde = "1.0.136"
futures = "0.3.24"
bytes = "1.2.1"
async-trait = "0.1.60"

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]